feat(harness): 完善工具执行结果处理与系统提示词
- 新增结构化工具执行结果，区分成功、参数错误和系统异常
- 将工具执行结果作为 tool 消息回传给 LLM
- 新增 System Prompt，约束模型的数据查询和错误处理行为
- 补充 Agent Loop、工具注册和阿里云客户端测试